# University-labs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
CircuitDesign/: README.md
CircuitDesign/lab4/: README.md
CompMath/: README.md
CompMath/lab1/: readme.md
CompMath/lab3/: pom.xml
CompMath/lab4/: pom.xml
DistributedStorage/lab1/: create_test_functions.sql  function.sql
LowLevelProgramming/: README.md
LowLevelProgramming/lab1/: lib.inc
LowLevelProgramming/lab2/: Makefile  colon.inc  dict.asm  lib.asm  main.asm  words.inc
LowLevelProgramming/lab3/: Makefile  prime_check.c  scalar.c
LowLevelProgramming/lab4-5/: Makefile  higher_order_functions.c  higher_order_functions.h  list.c  list.h  main.c
LowLevelProgramming/lab6/: Makefile  bmp_handling.c  bmp_handling.h  image.c  image.h  main.c
LowLevelProgramming/lab7/: Makefile  main.c  mem.c  mem.h
LowLevelProgramming/lab8/: Makefile
MPE/: README.md
MPE/lab3/: build.properties  build.xml  pom.xml
MPE/lab3_Gradle/: build.gradle  gradle.properties  settings.gradle
OS/: README.md
OS/lab1/: Makefile  dbg.h  futex.c  futex.h  main.c  main.h
Programming/lab3/: pom.xml
Programming/lab7/: pom.xml
Programming/lab8/: pom.xml
SoftwareTesting/lab1/: build.gradle
SoftwareTesting/lab2/: build.gradle
SoftwareTesting/lab3/: build.gradle
SystemSoftware/lab2/: pom.xml
SystemSoftware/lab3/: CMakeLists.txt
SystemSoftware/lab3/src/: main.c  main.h
SystemSoftware/lab3/src/Server/: ClientHandling.c  ClientHandling.h  Server.c  Server.h
Web/: README.md
Web/lab1/: .htaccess  badData.html  index.html  teapot.html
Web/lab2/: .gitignore
Web/lab3/: pom.xml
src/: main.c  types.h  util.h  work.c  work.h
(+331 files in other folders)
